--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ sourceSets {
 }
 
 dependencies {
-    compile fileTree(dir: '/usr/local/tomcat/lib', include: ['*.jar'])
-//    compile fileTree(dir: '/usr/local/Cellar/tomcat/8.0.21/libexec/lib', include: ['*.jar'])
+    compile fileTree(dir: '/usr/local/Cellar/tomcat/8.0.21/libexec/lib', include: ['*.jar'])
     compile fileTree(dir: 'WEB-INF/libs', include: ['*.jar'])
 }
